fix festival concert link

--- a/singer_pages/musicsection.html
+++ b/singer_pages/musicsection.html
@@ -125,7 +125,7 @@ function MM_swapImage() { //v3.0
 
               <tr> 
 
-                <td><a href="festcon.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image23','','../singer_images/submenu/subfestbut-over.jpg',1)"><img src="../singer_images/submenu/subfestbut.jpg" alt="Festivals and concerts" name="Image23" width="175" height="40" border="0"></a></td>
+                <td><a href="festcon.html" target="content" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image23','','../singer_images/submenu/subfestbut-over.jpg',1)"><img src="../singer_images/submenu/subfestbut.jpg" alt="Festivals and concerts" name="Image23" width="175" height="40" border="0"></a></td>
 
               </tr>
 
