--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ RewriteRule .* http://www.francinelucesings.com%{REQUEST_URI} [R=301,L]
 <meta http-equiv=Content-Type content="text/html; charset=iso-8859-1">
 <TITLE>Francine Luce  - International Singer Songwriter and Voice Teacher and Healer</TITLE>
   </HEAD>
-<!--<META http-equiv="refresh" content="0;URL=http://www.francinelucesings.com">-->
+<META http-equiv="refresh" content="0;URL=http://www.francinelucesings.com">
 <BODY bgcolor="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <table width="98%" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
